# dota2iconwp

./: CMakeLists.txt  README.md
cmake/: FindBoost.cmake  FindOpenCV.cmake
src/: CMakeLists.txt  fetch_icons.py  main.cpp
