
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

PROJECT(dota2iconwp)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib CACHE INTERNAL "Lib output dir")
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin CACHE INTERNAL "Binary output dir")

# defaulting to release build
IF (NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE  "Release" CACHE STRING "Type of build (Debug Release
  RelWithDebInfo MinSizeRel)" FORCE) 
ENDIF ()
IF(CMAKE_COMPILER_IS_GNUCC)
        SET(WARNING_FLAGS "-Wall -Wno-strict-aliasing")
        SET(PARALLEL_FLAGS "-D_GLIBCXX_PARALLEL")
ENDIF(CMAKE_COMPILER_IS_GNUCC)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS_INIT} ${WARNING_FLAGS} ${ARCHITECTURE_FLAGS} -g")

IF (APPLE)
  SET(CMAKE_OSX_ARCHITECTURES "x86_64" CACHE STRING "Build arch for OS X" FORCE)
ENDIF (APPLE)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)

# enable c++11x
IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	MESSAGE("Using clang.")
	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libstdc++" )
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++ ")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU")
	EXECUTE_PROCESS(COMMAND ${CMAKE_CXX_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
	IF(GCC_VERSION VERSION_LESS 4.2)
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
	ELSEIF(GCC_VERSION VERSION_LESS 4.7)
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
        	SET(ARCHITECTURE_FLAGS "-mtune=native -march=native")
	ELSE()		
        	SET(ARCHITECTURE_FLAGS "-mtune=native -march=native")
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
	ENDIF()
ENDIF()

ADD_SUBDIRECTORY(src)
